[project]
name = "transpiler-pro"
version = "1.0.0"
description = "Enterprise-grade deterministic Markdown to AsciiDoc transpiler with SUSE style validation."
authors = [
    { name = "Sushant Gaurav" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
]

[project.scripts]
# This maps the 'transpile' command directly to our CLI entry point
transpile = "transpiler_pro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "pdoc>=14.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transpiler_pro"]

[tool.ruff]
# Standardized to 110 to accommodate Rich console prints and regex
line-length = 110
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# E: Error, F: Pyflakes, I: Isort (import sorting), D: Docstrings
select = ["E", "F", "I", "D"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__ (covered by class docstrings)
    "D205", # 1 blank line required between summary and description (optional, but helps speed)
    "E501", # Ignore line length for regex and terminal messages
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Enforce Google-style docstrings

[tool.ruff.lint.isort]
known-first-party = ["transpiler_pro"]